--- a/docs/posts/13wk-1.out.ipynb
+++ b/docs/posts/13wk-1.out.ipynb
@@ -17,11 +17,11 @@
         "\n",
         "# 2. Import"
       ],
-      "id": "85ade0b1-050e-4e33-b861-b2f15519a3f8"
+      "id": "560202a5-d1d5-4e11-a516-216788419e69"
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 33,
       "metadata": {
         "tags": []
       },
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 34,
       "metadata": {
         "tags": []
       },
@@ -53,11 +53,11 @@
       "source": [
         "# 3. Data – `abcabC`"
       ],
-      "id": "9dfa3b0d-0e7d-415f-a108-bcfa48c49854"
+      "id": "249c0fe3-af8e-4be9-9627-cb904cd53b39"
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 35,
       "metadata": {
         "tags": []
       },
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 36,
       "metadata": {
         "tags": []
       },
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 37,
       "metadata": {
         "tags": []
       },
@@ -104,11 +104,11 @@
         "\n",
         "## A. `torch.nn.LSTMCell`"
       ],
-      "id": "fa21d7bc-2e9e-4913-9cc1-ea1b22c711b2"
+      "id": "3a37d4a7-d024-4101-912a-d88c8fc0bdcb"
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 38,
       "metadata": {
         "tags": []
       },
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 39,
       "metadata": {
         "tags": []
       },
@@ -162,11 +162,11 @@
         "\n",
         "`-` `lstmcell`을 이용하여 $t=0 \\to t=1$을 구현해보자. (결과비교용)"
       ],
-      "id": "26c66bd3-1ea1-4dcb-905f-c0bb077e1318"
+      "id": "f465f176-51a6-4df6-ab11-60ef26144a6c"
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 40,
       "metadata": {
         "tags": []
       },
@@ -200,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 41,
       "metadata": {
         "tags": []
       },
@@ -220,11 +220,11 @@
         "`-` 직접계산\n",
         "(${\\boldsymbol i}_t, {\\boldsymbol f}_t, {\\boldsymbol g}_t, {\\boldsymbol o}_t$)"
       ],
-      "id": "682db629-f79f-43e6-86ac-505b706233c6"
+      "id": "6cfb1a97-46f5-4ef8-9bc1-c4b98ecf4354"
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 42,
       "metadata": {
         "tags": []
       },
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 43,
       "metadata": {
         "tags": []
       },
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 44,
       "metadata": {
         "tags": []
       },
@@ -287,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 45,
       "metadata": {
         "tags": []
       },
@@ -303,11 +303,11 @@
       "source": [
         "그런데 아래와 같이 계산할수도 있음."
       ],
-      "id": "d4ccdb18-5072-4beb-b634-f4f5c2356bdd"
+      "id": "977f0d31-1715-4762-8557-6d6447dcc797"
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 46,
       "metadata": {
         "tags": []
       },
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 47,
       "metadata": {
         "tags": []
       },
@@ -350,11 +350,11 @@
       "source": [
         "`-` 직접계산 (${\\boldsymbol c}_t, {\\boldsymbol h}_t$)"
       ],
-      "id": "a300c0d6-1601-4d12-9cda-12c1988c3de3"
+      "id": "0df474d3-5174-4051-a51f-d11ffb3e78e0"
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 48,
       "metadata": {
         "tags": []
       },
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 49,
       "metadata": {
         "tags": []
       },
@@ -385,11 +385,11 @@
         "\n",
         "`-` `lstmcell`을 이용하여 구현해보자. (결과비교용)"
       ],
-      "id": "2c60e778-db78-401f-ad5b-498dcbb09ec0"
+      "id": "47206de7-e727-4baf-a800-f4f0f3f60945"
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 52,
       "metadata": {
         "tags": []
       },
@@ -423,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 53,
       "metadata": {
         "tags": []
       },
@@ -439,11 +439,11 @@
       "source": [
         "`-` 직접구현"
       ],
-      "id": "64398aba-5898-42c7-93ba-a1be0d43626c"
+      "id": "895d03ab-311d-4bc8-8cb4-afe47868e993"
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 54,
       "metadata": {
         "tags": []
       },
@@ -481,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 55,
       "metadata": {
         "tags": []
       },
@@ -497,11 +497,11 @@
       "source": [
         "## C. `torch.nn.LSTM`"
       ],
-      "id": "243d2467-047d-4ae7-a342-64e4b65dc785"
+      "id": "55fbac73-7303-4914-99e8-2b8dfd805ff2"
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 80,
       "metadata": {
         "tags": []
       },
@@ -512,11 +512,11 @@
         "cook = torch.nn.Linear(2,4)\n",
         "lstm = torch.nn.LSTM(4,2) # <-- 이거로 학습\n",
         "lstm.weight_ih_l0.data = lstmcell.weight_ih.data\n",
-        "lstm.weight_hh_l0.data = lstmcell.weight_hh.data \n",
+        "lstm.weight_hh_l0.data = lstmcell.weight_hh.data\n",
         "lstm.bias_ih_l0.data = lstmcell.bias_ih.data\n",
         "lstm.bias_hh_l0.data = lstmcell.bias_hh.data\n",
         "loss_fn = torch.nn.CrossEntropyLoss()\n",
-        "optimizr = torch.optim.Adam(list(lstmcell.parameters())+list(cook.parameters()),lr=0.1) \n",
+        "optimizr = torch.optim.Adam(list(lstm.parameters())+list(cook.parameters()),lr=0.1) \n",
         "#---#\n",
         "L = len(X)\n",
         "Water = torch.zeros(1,2)\n",
@@ -532,11 +532,11 @@
         "    optimizr.step()\n",
         "    optimizr.zero_grad()"
       ],
-      "id": "684038c5-dca4-4db0-8a56-58ccf2d06fee"
+      "id": "3bc756ae-a856-46e0-989f-89bd3ab24be4"
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 76,
       "metadata": {
         "tags": []
       },
@@ -556,7 +556,7 @@
         "\n",
         "`-` 적합"
       ],
-      "id": "f2f6e774-9bcb-4e3a-9398-0f65b4f9fa21"
+      "id": "a1e5a4ae-cd7a-42ed-b02a-dc1529653ddf"
     },
     {
       "cell_type": "code",
@@ -593,7 +593,7 @@
       "source": [
         "`-` 시각화"
       ],
-      "id": "8f1d9f96-aa81-4a76-90fb-53135aea3f02"
+      "id": "b8c80e1f-032e-40f5-8615-1a0cf44f6b81"
     },
     {
       "cell_type": "code",
@@ -671,7 +671,7 @@
       "source": [
         "## B. 시각화1: $({\\boldsymbol g}_t, {\\boldsymbol c}_{t-1}) \\to {\\boldsymbol c}_{t}$"
       ],
-      "id": "b01e3c2e-2913-4351-a9f9-35db34518001"
+      "id": "fe6608f6-fb95-44e1-8f65-4a41ab0daa84"
     },
     {
       "cell_type": "code",
@@ -708,7 +708,7 @@
         "-   `matshow`로 시각화할때 `vmin=-1`, `vmax=1`로 설정해도\n",
         "    ${\\boldsymbol c}_t$를 표현함에 부족함이 없을듯"
       ],
-      "id": "73561408-5f6e-439d-a930-f4f302c8d207"
+      "id": "d6edd802-ff07-48a0-96fe-d5b02eb284e4"
     },
     {
       "cell_type": "code",
@@ -761,7 +761,7 @@
         "\n",
         "## C. 시각화2: ${\\boldsymbol g}_t \\to {\\boldsymbol h}_{t}$"
       ],
-      "id": "9be13686-3551-43f4-b6f3-eb632c28d9de"
+      "id": "ebd26fba-10c6-41b7-8639-16b94dbc34b5"
     },
     {
       "cell_type": "code",
@@ -915,7 +915,7 @@
         "-   <https://pytorch.org/docs/stable/generated/torch.nn.LSTM.html>\n",
         "-   <https://arxiv.org/abs/1402.1128>"
       ],
-      "id": "3ab37bcf-d6b1-4080-bd63-3fe9cda6b6db"
+      "id": "ec7e49d8-34f3-4479-936d-bde1ebc20fd6"
     }
   ],
   "nbformat": 4,
@@ -936,7 +936,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.11.8"
     }
   }
 }
