--- a/posts/13wk-1.ipynb
+++ b/posts/13wk-1.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "46662b63-dee5-453b-8539-9d1d0e7929c2",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "61756f58-25dc-4f07-8f93-0ed355f58c02",
    "metadata": {
     "tags": []
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "86a18822-5d02-4b72-915d-f434ba4a5a69",
    "metadata": {
     "tags": []
@@ -102,7 +102,7 @@
        "['a', 'b', 'c', 'a', 'b', 'C', 'a', 'b', 'c', 'a']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "94c9e9bc-e4e4-4e04-b717-a3080d09f2e4",
    "metadata": {
     "tags": []
@@ -184,7 +184,7 @@
        "4  b  C"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "910fd73a-46c9-4545-b2bc-db0e1720d441",
    "metadata": {
     "tags": []
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "5ab20de4-0757-45a2-82b0-71ca68896365",
    "metadata": {
     "tags": []
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "c92202a8-2847-48e5-86f8-771b497bc3cc",
    "metadata": {
     "tags": []
@@ -274,7 +274,7 @@
        " tensor([0.1218, 0.5590], grad_fn=<SqueezeBackward1>))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "id": "206cb5a9-00c4-409b-9d1b-6e3bf3c54b97",
    "metadata": {
     "tags": []
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "id": "a714f717-0571-4c61-8ba4-9e737891a8e9",
    "metadata": {
     "tags": []
@@ -356,7 +356,7 @@
        " tensor([0.1734, 0.2688], grad_fn=<SqueezeBackward1>))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "id": "32fc61c5-071d-4f1e-91e2-4a1d66661040",
    "metadata": {
     "tags": []
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "id": "bd84a2d6-23a7-4e88-be20-b4649b4f2a65",
    "metadata": {
     "tags": []
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "id": "081f8f9b-cc35-4cb9-9cfe-58117ab96309",
    "metadata": {
     "tags": []
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "id": "6a6f42e8-47f2-486c-81c0-cddf869a51a5",
    "metadata": {
     "tags": []
@@ -462,7 +462,7 @@
        " tensor([0.6216, 0.4072], grad_fn=<SigmoidBackward0>))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "id": "b00426c0-d330-4e1a-b41a-a097b58904fb",
    "metadata": {
     "tags": []
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "986e497c-ce5d-4be0-8a69-b2b85b40908e",
    "metadata": {
     "tags": []
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "af028ce3-a056-4083-b6bd-e33fe00f98f0",
    "metadata": {
     "tags": []
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "735c92bf-d197-4a63-946f-fcfe54c138df",
    "metadata": {
     "tags": []
@@ -550,11 +550,11 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([0.1588, 0.1489], grad_fn=<MulBackward0>),\n",
-       " tensor([0.2613, 0.3834], grad_fn=<AddBackward0>))"
+       "(tensor([0.1067, 0.1069], grad_fn=<MulBackward0>),\n",
+       " tensor([0.1734, 0.2688], grad_fn=<AddBackward0>))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "4219bb6f-0275-41f4-81d9-c97b35803feb",
    "metadata": {
     "tags": []
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "id": "0aa701ff-b7e6-4036-b8c6-ee4cd69b80a9",
    "metadata": {
     "tags": []
@@ -628,7 +628,7 @@
        " tensor([0.1218, 0.5590], grad_fn=<SqueezeBackward1>))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "id": "46c85c22-20c5-4648-b362-7b706fc69ff2",
    "metadata": {
     "tags": []
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "id": "aa871391-e37a-4f3d-aa5d-7dad101f6f1c",
    "metadata": {
     "tags": []
@@ -698,7 +698,7 @@
        " tensor([0.1218, 0.5590], grad_fn=<AddBackward0>))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,8 +717,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "684038c5-dca4-4db0-8a56-58ccf2d06fee",
+   "execution_count": 80,
+   "id": "3bc756ae-a856-46e0-989f-89bd3ab24be4",
    "metadata": {
     "tags": []
    },
@@ -729,11 +729,11 @@
     "cook = torch.nn.Linear(2,4)\n",
     "lstm = torch.nn.LSTM(4,2) # <-- 이거로 학습\n",
     "lstm.weight_ih_l0.data = lstmcell.weight_ih.data\n",
-    "lstm.weight_hh_l0.data = lstmcell.weight_hh.data \n",
+    "lstm.weight_hh_l0.data = lstmcell.weight_hh.data\n",
     "lstm.bias_ih_l0.data = lstmcell.bias_ih.data\n",
     "lstm.bias_hh_l0.data = lstmcell.bias_hh.data\n",
     "loss_fn = torch.nn.CrossEntropyLoss()\n",
-    "optimizr = torch.optim.Adam(list(lstmcell.parameters())+list(cook.parameters()),lr=0.1) \n",
+    "optimizr = torch.optim.Adam(list(lstm.parameters())+list(cook.parameters()),lr=0.1) \n",
     "#---#\n",
     "L = len(X)\n",
     "Water = torch.zeros(1,2)\n",
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 76,
    "id": "7f78e4d4-91ec-44a9-a72a-e2f203601eb2",
    "metadata": {
     "tags": []
@@ -765,7 +765,7 @@
        " tensor([[0.1218, 0.5590]], grad_fn=<SqueezeBackward1>))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
