--- a/docs/posts/14wk-1.out.ipynb
+++ b/docs/posts/14wk-1.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "cd9e2a01-f505-4847-9ff3-5c8e9386d2f7"
+      "id": "3d02abae-069e-4079-8ac4-3d5a6527bd18"
     },
     {
       "cell_type": "code",
@@ -33,7 +33,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "9d72f574-fa0c-4f51-a319-95829a63d5ee"
+      "id": "7c36afd4-7249-4eb4-ab43-0dfc68605e26"
     },
     {
       "cell_type": "code",
@@ -77,7 +77,7 @@
         "\n",
         "`-` 예시1"
       ],
-      "id": "a6aefcac-d888-42f6-899a-6f5ab5f2ec3a"
+      "id": "2dc8779a-afc4-447e-8c2b-bb75f7d8f1f5"
     },
     {
       "cell_type": "code",
@@ -134,7 +134,7 @@
       "source": [
         "`-` 예시2"
       ],
-      "id": "771ca7fd-8a4a-4f2c-988a-64b1450997ea"
+      "id": "5f9a0542-dee5-47e8-90c7-50e066a48c44"
     },
     {
       "cell_type": "code",
@@ -191,7 +191,7 @@
       "source": [
         "## B. 시각화"
       ],
-      "id": "8997f685-91cb-4a5e-ab77-440ef4b9bb88"
+      "id": "99e365c3-c8ca-4f7f-aced-81e23ba588b5"
     },
     {
       "cell_type": "code",
@@ -251,7 +251,7 @@
       "source": [
         "# 5. Env 클래스 구현"
       ],
-      "id": "8d145425-e10e-4407-bcb3-b4a465f2a6ee"
+      "id": "e12e452a-c789-45d4-acf1-3b097bd40bcd"
     },
     {
       "cell_type": "code",
@@ -303,7 +303,7 @@
       "source": [
         "`-` Class 구현: 아래와 같은 느낌의 클래스를 구현해보자."
       ],
-      "id": "b6b9f031-9ed4-432d-b884-297a30cf0fd2"
+      "id": "b37392bc-2d4b-4752-a1e4-9be5d4ac002b"
     },
     {
       "cell_type": "code",
@@ -403,7 +403,7 @@
         "\n",
         "`-` 첫번째 시도"
       ],
-      "id": "99bb75bb-1594-4600-a238-4f84087f8aba"
+      "id": "06031c73-9dbc-4312-b7bd-257edeaf8706"
     },
     {
       "cell_type": "code",
@@ -463,7 +463,7 @@
       "source": [
         "## B. 환경과 상호작용"
       ],
-      "id": "234fbf67-14cb-4052-9fa0-82d2d5e2d1ae"
+      "id": "82e33a42-18f8-46b4-9598-aa9f00e80dba"
     },
     {
       "cell_type": "code",
@@ -538,7 +538,7 @@
       "source": [
         "## C. 상호작용결과 시각화"
       ],
-      "id": "4b1ca04b-f5b5-458b-92bd-ab878abc39fb"
+      "id": "e3601882-5735-4598-ba49-93a2e24bf703"
     },
     {
       "cell_type": "code",
@@ -585,7 +585,7 @@
         "\n",
         "`-` 무작위로 10000판을 진행해보자."
       ],
-      "id": "167b7a9b-af9e-4c98-a275-89a5899e50a2"
+      "id": "c5304e69-714e-444a-8235-36e805bc8b9f"
     },
     {
       "cell_type": "code",
@@ -637,7 +637,7 @@
       "source": [
         "`-` 데이터관찰"
       ],
-      "id": "74325e40-801a-48ac-9677-9565b995511a"
+      "id": "cd9c4610-da1e-46ac-9672-92c183a2832d"
     },
     {
       "cell_type": "code",
@@ -755,7 +755,7 @@
       "source": [
         "`-` 환경을 이해하기 위한 기록 (1)"
       ],
-      "id": "241a57dc-1a46-43d8-8ed3-a4118d70599a"
+      "id": "8e34db57-5213-4549-9add-b7531088c660"
     },
     {
       "cell_type": "code",
@@ -856,7 +856,7 @@
       "source": [
         "`-` 환경을 이해하기 위한 기록 (2)"
       ],
-      "id": "e542a916-cd1f-47f8-b514-4dfa82d13ae8"
+      "id": "c7ffe198-8583-450b-8799-069e69284086"
     },
     {
       "cell_type": "code",
@@ -947,7 +947,7 @@
         "\n",
         "`-` action=1 일때 각 state의 가치 (=기대보상)"
       ],
-      "id": "e6188259-7e44-44ca-852a-38b081e6f8db"
+      "id": "42cb1443-35a4-468b-99f0-94a3007b9a8c"
     },
     {
       "cell_type": "code",
@@ -967,7 +967,7 @@
       "source": [
         "`-` 분석1"
       ],
-      "id": "2628681e-971c-4e31-a7cb-5e48b2a51b01"
+      "id": "645b007d-2238-4252-bf55-05cd76e08adb"
     },
     {
       "cell_type": "code",
@@ -990,7 +990,7 @@
         "\n",
         "`-` 분석2"
       ],
-      "id": "7bf19182-ada8-4a6f-a004-8a10010a78e2"
+      "id": "4d600c4f-3faa-4810-b14f-d4997f0ee91b"
     },
     {
       "cell_type": "code",
@@ -1029,7 +1029,7 @@
         "\n",
         "[1] 즉 next_state가 가지는 잠재적값어치는 고려되어있지 않음"
       ],
-      "id": "bfe92121-45a1-418a-b85d-51fd2624ccbf"
+      "id": "e18355e3-823f-4907-a6a0-745739957a02"
     },
     {
       "cell_type": "code",
@@ -1076,7 +1076,7 @@
         "좀 더 엄밀하게 쓰면 (terminated, not-terminated 로 나누어 쓰면) 아래와\n",
         "같다.\n",
         "\n",
-        "$$q(s,a) \\approx \\begin{cases}  \\text{reward}(s,a) + 0.99 \\times \\max_{a}q(s',a) & \\text{$s$ is not in terminated state} \\\\ \\text{reward}(s,a) & \\text{$s$ is in terminated-state} \\end{cases}$$\n",
+        "$$q(s,a) \\approx \\begin{cases}  \\text{reward}(s,a) + 0.99 \\times \\max_{a}q(s',a) & \\text{not terminated} \\\\ \\text{reward}(s,a) & \\text{terminated} \\end{cases}$$\n",
         "\n",
         "> **Note**\n",
         ">\n",
@@ -1091,7 +1091,7 @@
         "> “바람,소용돌이” 등의 외부의 확률적인 요소가 있는 환경에서 의미가\n",
         "> 있으며 우리의 예제에서는 의미가 없다."
       ],
-      "id": "452081a3-3f24-473a-a050-f848f4018ffb"
+      "id": "cbd1134f-546d-4b65-8129-658b6d5ac599"
     },
     {
       "cell_type": "code",
@@ -1175,7 +1175,7 @@
         "\n",
         "`-` 상태 (0,0)에 있다고 가정해보자."
       ],
-      "id": "aabca236-71ea-484a-9007-6917e3cbec88"
+      "id": "0b573cf9-5929-47e0-87fd-af91f28341c6"
     },
     {
       "cell_type": "code",
@@ -1197,7 +1197,7 @@
         "\n",
         "`-` 상태 (2,3)에 있다고 가정해보자."
       ],
-      "id": "8408c0e4-d17f-4bd0-965c-b9a26cfd0fd1"
+      "id": "ee28aa9d-8834-4041-bedc-2f4f6c361235"
     },
     {
       "cell_type": "code",
@@ -1219,7 +1219,7 @@
         "\n",
         "`-` 상태 (3,2)에 있다고 가정해보자."
       ],
-      "id": "412e6a70-a6df-4440-abf1-3c2b5d200011"
+      "id": "31acca0c-f7f1-4187-8ded-f48cbabba142"
     },
     {
       "cell_type": "code",
@@ -1241,7 +1241,7 @@
         "\n",
         "`-` 각 상태에서 최적은 action은 아래와 같다."
       ],
-      "id": "1314b53b-a7d2-4f76-98af-011afb23b612"
+      "id": "9afa0643-b061-4a41-8d65-e6d70026f7b0"
     },
     {
       "cell_type": "code",
@@ -1285,7 +1285,7 @@
       "source": [
         "`-` 전략(=정책)을 정리해보자."
       ],
-      "id": "3b6052e3-1e32-4942-bacc-60c1c9d8a0f2"
+      "id": "66f4f56f-e5d0-4bd8-b3e9-9357f31e2254"
     },
     {
       "cell_type": "code",
@@ -1333,7 +1333,7 @@
       "source": [
         "## D. 에이전트 클래스 설계"
       ],
-      "id": "9f16a34a-d4db-40f4-9e1d-ecb165600c00"
+      "id": "4ff4096d-b994-4a79-a7a4-65c31f9e658a"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1374,7 @@
       "source": [
         "## E. 환경과 상호작용"
       ],
-      "id": "54dd04d8-6ba5-48c8-942c-bd3f592251c7"
+      "id": "78cbbd28-620e-4c66-b9c5-a0bd90cd0336"
     },
     {
       "cell_type": "code",
@@ -1439,7 +1439,7 @@
       "source": [
         "## F. 상호작용결과 시각화"
       ],
-      "id": "552a6229-899d-4403-85d4-24fb87ea164a"
+      "id": "ba9e34ff-ddf7-42d8-9b02-9dc5376f0c85"
     },
     {
       "cell_type": "code",
@@ -1462,7 +1462,7 @@
         "\n",
         "## A. 클래스 설계"
       ],
-      "id": "a41cf377-212c-4331-8d94-ad609e755ee3"
+      "id": "308b39b2-3966-4000-8a83-ceb1dd8678df"
     },
     {
       "cell_type": "code",
@@ -1490,7 +1490,7 @@
       "source": [
         "## B. 환경과 상호작용"
       ],
-      "id": "dbb635d5-4984-4652-9dd8-563839aaf905"
+      "id": "f2c21534-3f2e-423d-b191-ddccc8373ad3"
     },
     {
       "cell_type": "code",
@@ -1559,7 +1559,7 @@
       "source": [
         "## C. 상호작용 결과 시각화"
       ],
-      "id": "6add97ad-1f79-45e5-8846-b54e841295dd"
+      "id": "56f01f4f-37fc-4257-a201-ddcf9974cf1e"
     },
     {
       "cell_type": "code",
