--- a/posts/14wk-1.ipynb
+++ b/posts/14wk-1.ipynb
@@ -53,13 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 211,
    "id": "5b1cfd48-d338-4ddd-8b59-f8ab593ebda9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "#!pip install gymnasium\n",
+    "#---#\n",
     "import gymnasium as gym\n",
     "#---#\n",
     "import numpy as np\n",
@@ -2971,7 +2973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 213,
    "id": "e146d5e8-4c91-45ce-990f-f501db858092",
    "metadata": {
     "tags": []
@@ -2980,33 +2982,29 @@
    "source": [
     "class AgentRandom:\n",
     "    def __init__(self,env):\n",
+    "        # define spaces \n",
     "        self.action_space = env.action_space\n",
     "        self.state_spcae = env.state_space \n",
-    "        \n",
-    "        # episode-wise info \n",
+    "        # other info\n",
     "        self.score = 0 \n",
     "        self.scores = [] \n",
     "        self.playtimes = []\n",
     "        self.n_episodes = 0\n",
     "        self.n_experiences = 0 \n",
-    "        \n",
-    "        # time-wise info\n",
+    "        # replay_buffer \n",
     "        self.current_state = None \n",
     "        self.action = None         \n",
     "        self.reward = None \n",
     "        self.next_state = None         \n",
     "        self.terminated = None \n",
-    "\n",
-    "        # replay_buffer \n",
+    "        #--#\n",
     "        self.current_states = [] \n",
     "        self.actions = []\n",
     "        self.rewards = []\n",
     "        self.next_states = [] \n",
     "        self.terminations = [] \n",
-    "\n",
     "    def act(self):\n",
     "        self.action = self.action_space.sample() \n",
-    "\n",
     "    def save_experience(self):\n",
     "        self.actions.append(self.action) \n",
     "        self.current_states.append(self.current_state)\n",
