--- a/docs/posts/14wk-1.out.ipynb
+++ b/docs/posts/14wk-1.out.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "3d02abae-069e-4079-8ac4-3d5a6527bd18"
+      "id": "1b18f39e-6a88-49c2-9ee6-44ae74035855"
     },
     {
       "cell_type": "code",
@@ -33,16 +33,18 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "7c36afd4-7249-4eb4-ab43-0dfc68605e26"
+      "id": "d872be6d-fdf8-41f0-9d88-1daa7fce428f"
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 211,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
+        "#!pip install gymnasium\n",
+        "#---#\n",
         "import gymnasium as gym\n",
         "#---#\n",
         "import numpy as np\n",
@@ -77,7 +79,7 @@
         "\n",
         "`-` 예시1"
       ],
-      "id": "2dc8779a-afc4-447e-8c2b-bb75f7d8f1f5"
+      "id": "fd2222ae-20bf-44fb-93bf-b0591cd13ce4"
     },
     {
       "cell_type": "code",
@@ -134,7 +136,7 @@
       "source": [
         "`-` 예시2"
       ],
-      "id": "5f9a0542-dee5-47e8-90c7-50e066a48c44"
+      "id": "270e4344-5847-459a-9769-354827d6e156"
     },
     {
       "cell_type": "code",
@@ -191,7 +193,7 @@
       "source": [
         "## B. 시각화"
       ],
-      "id": "99e365c3-c8ca-4f7f-aced-81e23ba588b5"
+      "id": "c0b9cbfc-0111-49f1-8522-5603847291e6"
     },
     {
       "cell_type": "code",
@@ -251,7 +253,7 @@
       "source": [
         "# 5. Env 클래스 구현"
       ],
-      "id": "e12e452a-c789-45d4-acf1-3b097bd40bcd"
+      "id": "29fcc054-138c-4783-80f0-d76df4a9a3ec"
     },
     {
       "cell_type": "code",
@@ -303,7 +305,7 @@
       "source": [
         "`-` Class 구현: 아래와 같은 느낌의 클래스를 구현해보자."
       ],
-      "id": "b37392bc-2d4b-4752-a1e4-9be5d4ac002b"
+      "id": "dea8942a-01e2-4706-965e-bafe7e008dc6"
     },
     {
       "cell_type": "code",
@@ -403,11 +405,11 @@
         "\n",
         "`-` 첫번째 시도"
       ],
-      "id": "06031c73-9dbc-4312-b7bd-257edeaf8706"
+      "id": "acbdabee-5178-4320-aa9e-7bdc59d6a6e0"
     },
     {
       "cell_type": "code",
-      "execution_count": 189,
+      "execution_count": 213,
       "metadata": {
         "tags": []
       },
@@ -415,33 +417,29 @@
       "source": [
         "class AgentRandom:\n",
         "    def __init__(self,env):\n",
+        "        # define spaces \n",
         "        self.action_space = env.action_space\n",
         "        self.state_spcae = env.state_space \n",
-        "        \n",
-        "        # episode-wise info \n",
+        "        # other info\n",
         "        self.score = 0 \n",
         "        self.scores = [] \n",
         "        self.playtimes = []\n",
         "        self.n_episodes = 0\n",
         "        self.n_experiences = 0 \n",
-        "        \n",
-        "        # time-wise info\n",
+        "        # replay_buffer \n",
         "        self.current_state = None \n",
         "        self.action = None         \n",
         "        self.reward = None \n",
         "        self.next_state = None         \n",
         "        self.terminated = None \n",
-        "\n",
-        "        # replay_buffer \n",
+        "        #--#\n",
         "        self.current_states = [] \n",
         "        self.actions = []\n",
         "        self.rewards = []\n",
         "        self.next_states = [] \n",
         "        self.terminations = [] \n",
-        "\n",
         "    def act(self):\n",
         "        self.action = self.action_space.sample() \n",
-        "\n",
         "    def save_experience(self):\n",
         "        self.actions.append(self.action) \n",
         "        self.current_states.append(self.current_state)\n",
@@ -463,7 +461,7 @@
       "source": [
         "## B. 환경과 상호작용"
       ],
-      "id": "82e33a42-18f8-46b4-9598-aa9f00e80dba"
+      "id": "6a5612ff-9cb5-47b5-8593-1a111c35665f"
     },
     {
       "cell_type": "code",
@@ -538,7 +536,7 @@
       "source": [
         "## C. 상호작용결과 시각화"
       ],
-      "id": "e3601882-5735-4598-ba49-93a2e24bf703"
+      "id": "61f3be43-dbfb-4dc2-b51a-48bc164c7164"
     },
     {
       "cell_type": "code",
@@ -585,7 +583,7 @@
         "\n",
         "`-` 무작위로 10000판을 진행해보자."
       ],
-      "id": "c5304e69-714e-444a-8235-36e805bc8b9f"
+      "id": "9db6a385-ff63-4b11-84e3-66b3350ae099"
     },
     {
       "cell_type": "code",
@@ -637,7 +635,7 @@
       "source": [
         "`-` 데이터관찰"
       ],
-      "id": "cd9c4610-da1e-46ac-9672-92c183a2832d"
+      "id": "80bda853-4bed-4d7d-9361-7ff340451f70"
     },
     {
       "cell_type": "code",
@@ -755,7 +753,7 @@
       "source": [
         "`-` 환경을 이해하기 위한 기록 (1)"
       ],
-      "id": "8e34db57-5213-4549-9add-b7531088c660"
+      "id": "0463705a-9263-4368-b95f-2e97820a3e97"
     },
     {
       "cell_type": "code",
@@ -856,7 +854,7 @@
       "source": [
         "`-` 환경을 이해하기 위한 기록 (2)"
       ],
-      "id": "c7ffe198-8583-450b-8799-069e69284086"
+      "id": "e3885a00-5a4e-4a5f-8dd5-f35a2cdf5763"
     },
     {
       "cell_type": "code",
@@ -947,7 +945,7 @@
         "\n",
         "`-` action=1 일때 각 state의 가치 (=기대보상)"
       ],
-      "id": "42cb1443-35a4-468b-99f0-94a3007b9a8c"
+      "id": "803936c5-209a-47b2-87a4-aded4d7a1816"
     },
     {
       "cell_type": "code",
@@ -967,7 +965,7 @@
       "source": [
         "`-` 분석1"
       ],
-      "id": "645b007d-2238-4252-bf55-05cd76e08adb"
+      "id": "198dee06-b321-480a-b899-03b371ac4131"
     },
     {
       "cell_type": "code",
@@ -990,7 +988,7 @@
         "\n",
         "`-` 분석2"
       ],
-      "id": "4d600c4f-3faa-4810-b14f-d4997f0ee91b"
+      "id": "00069bad-f02f-49f8-8ae9-2f9cf6f066fb"
     },
     {
       "cell_type": "code",
@@ -1029,7 +1027,7 @@
         "\n",
         "[1] 즉 next_state가 가지는 잠재적값어치는 고려되어있지 않음"
       ],
-      "id": "e18355e3-823f-4907-a6a0-745739957a02"
+      "id": "b1acd0d2-ff2a-4f4d-acbb-2d1f596e3c5e"
     },
     {
       "cell_type": "code",
@@ -1091,7 +1089,7 @@
         "> “바람,소용돌이” 등의 외부의 확률적인 요소가 있는 환경에서 의미가\n",
         "> 있으며 우리의 예제에서는 의미가 없다."
       ],
-      "id": "cbd1134f-546d-4b65-8129-658b6d5ac599"
+      "id": "b5ebfb32-78ca-41bf-8846-61e348d7f6f2"
     },
     {
       "cell_type": "code",
@@ -1175,7 +1173,7 @@
         "\n",
         "`-` 상태 (0,0)에 있다고 가정해보자."
       ],
-      "id": "0b573cf9-5929-47e0-87fd-af91f28341c6"
+      "id": "074af6ec-f4db-4b50-8c00-44de5d3180cb"
     },
     {
       "cell_type": "code",
@@ -1197,7 +1195,7 @@
         "\n",
         "`-` 상태 (2,3)에 있다고 가정해보자."
       ],
-      "id": "ee28aa9d-8834-4041-bedc-2f4f6c361235"
+      "id": "7669075d-8a6a-4ed4-8090-8717deeb073e"
     },
     {
       "cell_type": "code",
@@ -1219,7 +1217,7 @@
         "\n",
         "`-` 상태 (3,2)에 있다고 가정해보자."
       ],
-      "id": "31acca0c-f7f1-4187-8ded-f48cbabba142"
+      "id": "83349cd9-3a8f-43f2-abb8-81bea0580880"
     },
     {
       "cell_type": "code",
@@ -1241,7 +1239,7 @@
         "\n",
         "`-` 각 상태에서 최적은 action은 아래와 같다."
       ],
-      "id": "9afa0643-b061-4a41-8d65-e6d70026f7b0"
+      "id": "fd2cc05a-09f2-4340-a929-7a573d624e2f"
     },
     {
       "cell_type": "code",
@@ -1285,7 +1283,7 @@
       "source": [
         "`-` 전략(=정책)을 정리해보자."
       ],
-      "id": "66f4f56f-e5d0-4bd8-b3e9-9357f31e2254"
+      "id": "7fe04acf-5ae2-41e5-99fe-540a9ac4e3c0"
     },
     {
       "cell_type": "code",
@@ -1333,7 +1331,7 @@
       "source": [
         "## D. 에이전트 클래스 설계"
       ],
-      "id": "4ff4096d-b994-4a79-a7a4-65c31f9e658a"
+      "id": "4e9430fb-44dd-460c-ad07-3801859aff5c"
     },
     {
       "cell_type": "code",
@@ -1374,7 +1372,7 @@
       "source": [
         "## E. 환경과 상호작용"
       ],
-      "id": "78cbbd28-620e-4c66-b9c5-a0bd90cd0336"
+      "id": "9126810d-090b-4297-b4af-be6203445972"
     },
     {
       "cell_type": "code",
@@ -1439,7 +1437,7 @@
       "source": [
         "## F. 상호작용결과 시각화"
       ],
-      "id": "ba9e34ff-ddf7-42d8-9b02-9dc5376f0c85"
+      "id": "30a7c87f-601f-4144-b0d1-194e59ae3bd3"
     },
     {
       "cell_type": "code",
@@ -1462,7 +1460,7 @@
         "\n",
         "## A. 클래스 설계"
       ],
-      "id": "308b39b2-3966-4000-8a83-ceb1dd8678df"
+      "id": "9de573ef-c9ce-40ce-95bb-11787df3e356"
     },
     {
       "cell_type": "code",
@@ -1490,7 +1488,7 @@
       "source": [
         "## B. 환경과 상호작용"
       ],
-      "id": "f2c21534-3f2e-423d-b191-ddccc8373ad3"
+      "id": "78b7bc5d-2144-44ca-83d9-60c0f660c14d"
     },
     {
       "cell_type": "code",
@@ -1559,7 +1557,7 @@
       "source": [
         "## C. 상호작용 결과 시각화"
       ],
-      "id": "56f01f4f-37fc-4257-a201-ddcf9974cf1e"
+      "id": "19a908a3-d299-45f6-a578-553745deee12"
     },
     {
       "cell_type": "code",
